
[package]
name = 'control-panel'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.7'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib']
bench = false

[dependencies]
candid = { workspace = true }
canfund = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.0.2-alpha.6' }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['serde', 'v4'] }
control-panel-api = { path = '../api', version = '0.0.2-alpha.4' }
station-api = { path = '../../station/api', version = '0.0.2-alpha.7' }
semver = { workspace = true }
email_address = '0.2.4'

[dev-dependencies]
candid_parser = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ['full'] }
