
[package]
name = 'station-api'
include = ['src', 'Cargo.toml']
version = '0.4.0'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.2.0' }
serde = { workspace = true }
serde_bytes = { workspace = true }
