
[package]
name = 'station'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.4'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib']
bench = false

[features]
canbench = ['canbench-rs']

[dependencies]
anyhow = { workspace = true }
deunicode = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
canbench-rs = { workspace = true, optional = true }
candid = { workspace = true }
canfund = { path = '../../../libs/canfund', version = '0.0.2-alpha.2' }
futures = { workspace = true }
hex = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.0.2-alpha.3' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['v4'] }
station-api = { path = '../api', version = '0.0.2-alpha.3' }
upgrader-api = { path = '../../upgrader/api', version = '0.0.2-alpha.3' }
alloy = { version = "0.2.0", features = ["signers", "k256", "consensus", "eips"] }
alloy-chains = "0.1.23"

[dev-dependencies]
candid_parser = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ['full'] }
