
[package]
name = 'station'
include = ['src', 'Cargo.toml']
version = '0.6.0'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib']
bench = false

[features]
canbench = ['canbench-rs']

[dependencies]
anyhow = { workspace = true }
deunicode = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
canbench-rs = { workspace = true, optional = true }
candid = { workspace = true }
canfund = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.2.0' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
strum = { version = '0.26', features = ['derive'] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['v4'] }
station-api = { path = '../api', version = '0.5.0' }
upgrader-api = { path = '../../upgrader/api', version = '0.2.0' }

[dev-dependencies]
candid_parser = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ['full'] }
