
[package]
name = 'upgrader-api'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.3'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.0.2-alpha.2' }
station-api = { path = '../../../core/station/api', version = '0.0.2-alpha.2' }
ic-stable-structures = { workspace = true }
