
[package]
name = 'upgrader-api'
include = ['src', 'Cargo.toml']
version = '0.1.0'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.1.0' }
station-api = { path = '../../../core/station/api', version = '0.3.0' }
ic-stable-structures = { workspace = true }
