
[package]
name = 'upgrader'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.2'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.0.2-alpha.2' }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
upgrader-api = { path = '../api', version = '0.0.2-alpha.2' }
uuid = { workspace = true, features = ['v4'] }

[dev-dependencies]
candid_parser = { workspace = true }
tokio = { workspace = true, features = ['full'] }
