
[package]
name = 'upgrader'
include = ['src', 'Cargo.toml']
version = '0.2.0'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
orbit-essentials = { path = '../../../libs/orbit-essentials', version = '0.2.0' }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
station-api = { path = '../../station/api', version = '0.4.0' }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['v4'] }
upgrader-api = { path = '../api', version = '0.1.0' }

[dev-dependencies]
candid_parser = { workspace = true }
tokio = { workspace = true, features = ['full'] }
